--- a/src/components/carousel/Carousel.scss
+++ b/src/components/carousel/Carousel.scss
@@ -1,16 +1,16 @@
-.project__carousel {
+.carousel {
   max-width: 100%;
-  min-height: 300px;
   height: 100%;
 
   button {
     z-index: 0;
   }
 
-  &-images {
+  &__images {
     display: flex;
     gap: 1rem;
     align-items: center;
+
     overflow-x: hidden;
     scroll-snap-type: x mandatory;
 
@@ -19,23 +19,25 @@
 
     cursor: pointer;
 
+    filter: grayscale(50%);
+    opacity: 0.75;
+
+    transition: opacity 0.3s ease-in-out;
+
+    &:hover,
+    &:focus {
+      filter: grayscale(0%);
+      opacity: 1;
+    }
+
     img {
       scroll-snap-align: start;
       object-fit: cover;
-
-      filter: grayscale(20%);
-      opacity: 1;
-      transition: transform 0.3s ease-in-out;
-
-      &:hover {
-        filter: grayscale(0%);
-        opacity: 1;
-      }
     }
   }
 
-  &-bottom-buttons {
-    --button-size: 0.85rem;
+  &__bottom-buttons {
+    --button-size: 0.75rem;
 
     margin-top: 1rem;
 
@@ -48,8 +50,8 @@
 
     button {
       height: var(--button-size);
-      aspect-ratio: 1/1;
-      border-radius: 100vh;
+      aspect-ratio: 1;
+      border-radius: 50vw;
 
       cursor: pointer;
 
