--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -1,5 +1,6 @@
 header {
   position: sticky;
+  padding-block: 5vh;
 
   display: grid;
   grid-template-columns: 1fr 1fr;
