--- a/src/components/hero/Hero.scss
+++ b/src/components/hero/Hero.scss
@@ -1,12 +1,11 @@
 .hero {
   --spacer: 1vh;
   --timer: 1s;
-
-  min-height: 110vh;
-
-  animation: fadeInFromLeft var(--timer) cubic-bezier(0, 1.32, 1, 1) 1 normal forwards;
+  position: relative;
 
   &__text {
+    animation: fadeInFromLeft var(--timer) cubic-bezier(0, 1.32, 1, 1) 1 normal forwards;
+
     transform: translateY(-10vh);
 
     // Bryan Miller
@@ -48,7 +47,7 @@
   }
 }
 
-.custom-shape-divider-bottom-1680202580 {
+.custom-shape-divider-bottom-1680894835 {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -57,16 +56,16 @@
   line-height: 0;
 }
 
-.custom-shape-divider-bottom-1680202580 svg {
+.custom-shape-divider-bottom-1680894835 svg {
   position: relative;
   display: block;
-  width: calc(135% + 1.3px);
-  height: 78px;
-  border-radius: 0;
+  width: calc(100% + 1.3px);
+  // fixed: static height looked too wavy on mobile
+  height: min(10vw, 75px);
 }
 
-.custom-shape-divider-bottom-1680202580 .shape-fill {
-  fill: var(--clr-portfolio-bg);
+.custom-shape-divider-bottom-1680894835 .shape-fill {
+  fill: #0d0d0d;
 }
 
 @keyframes fadeInFromLeft {
