--- a/src/components/portfolio/Portfolio.scss
+++ b/src/components/portfolio/Portfolio.scss
@@ -4,7 +4,8 @@
   display: grid;
   place-items: center;
 
-  padding-block: 5vh;
+  padding-top: 5vh;
+  padding-bottom: 10vh;
 
   background: var(--clr-portfolio-bg);
   color: var(--clr-neutral-200);
@@ -16,7 +17,7 @@
   }
 }
 
-.custom-shape-divider-bottom-1680726704 {
+.custom-shape-divider-bottom-1680894927 {
   position: absolute;
   bottom: 0;
   left: 0;
@@ -25,13 +26,14 @@
   line-height: 0;
 }
 
-.custom-shape-divider-bottom-1680726704 svg {
+.custom-shape-divider-bottom-1680894927 svg {
   position: relative;
   display: block;
-  width: calc(177% + 1.3px);
-  height: 63px;
+  width: calc(100% + 1.3px);
+  // fixed: static height looked too wavy on mobile
+  height: min(10vw, 75px);
 }
 
-.custom-shape-divider-bottom-1680726704 .shape-fill {
+.custom-shape-divider-bottom-1680894927 .shape-fill {
   fill: var(--clr-about-bg);
 }
